--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -7,30 +7,29 @@
     {{#with main}}
     <main>
         <section>
-            {{> title data=summary.title big=true}}
-            <div>
-                <p>
-                    {{summary.text}}
-                </p>
-            </div>
+            {{> title data="My education" big=true}}
+            <ul>
+                {{#each educations}}
+                <li>{{name}}
+                    {{#unless isEnd }} (ще в процесі)
+                    {{/unless}}
+                </li>
+                {{/each}}
+            </ul>
         </section>
 
         <section>
-            {{#with experience}}
-            <div>
-                {{> title data=title big=false}}
-            </div>
-            <div>
-                <p>
-                    {{text}}
-                </p>
-            </div>
-            {{/with}}
+            {{> title data="My certificates" big=false}}
+            <ul>
+                {{#each certificates}}
+                <li>{{name}} ({{id}})
+
+                </li>
+                {{/each}}
+            </ul>
         </section>
     </main>
     {{/with}}
-
-
 </div>
 
 {{!--
