--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,67 +1,285 @@
-<main>
-    <h1 class="text-center text-uppercase">Hello world</h1>
-    <h2 class="text-end text-lowercase">Second</h2>
-    <h3 class="text-capitalize">3 title first tree</h3>
+<main> {{!-- class="text-bg-warning" --}}
 
+    <div class="row gy-5">
 
-    <hr>
+        <section class="col-12">
 
-    <div class="display-1 text-muted">Hello world</div>
-    <div class="display-5">Second</div>
-    <div class="display-6">3 title</div>
+            <div class="card text-bg-dark">
+                <img class="card-img-top" src="https://picsum.photos/400/200" alt="Product photo">
+                <div class="card-body">
+                    <h5 class="card-title text-bg-primary">Product #16433</h5>
+                    <p class="text-bg-secondary">Хаб Cablexpert USB 3.0 на <br> 4 порти (A-AMU3-4P-01)</p>
+                    <a href="/summary" class="btn btn-primary">Open</a>
+                </div>
+            </div>
+        </section>
 
-    <hr>
+        <section class="col-3">
+            <div class="card">
+                <div class="card-header">
+                    <div>Menu
+                    </div>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <a href="#" class="btn btn-link">Home page</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="btn btn-link">Summary page</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="btn btn-link">Skills page</a>
+                    </li>
+                </ul>
 
-    <span class="text-muted">Додатковий текст</span>
+                <div class="card-footer">
 
-    <div class="text-muted text-end">
-        Додатковий <span class="display-6">текст</span>
+                    <button class="btn btn-dark btn-sm">Update list</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="col-9">
+            <table class="table table-striped table-bordered text-bg-success">
+                <thead>
+                    <tr>
+                        <th>
+                            #id
+                        </th>
+                        <th>
+                            name
+                        </th>
+                        <th>
+                            age
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>Ivan</td>
+                        <td>29</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section class="col-12">
+            <div class="row g-2">
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
-    <hr>
+    <br>
+    <br>
+    <br>
 
-    <button class="btn btn-secondary">
-        <span class="text-uppercase">Test button</span>
-        <h1>Test</h1>
-    </button>
-
-    <button class="btn btn-info">
-        Test button
-    </button>
-
-    <a href="#" class="btn btn-primary">
-        Button primary
-    </a>
-
-    <hr>
-
-    <p class="text-primary">My text</p>
-    <p class="text-muted">My text</p>
-
-    <hr>
-    <button class="btn btn-secondary btn-lg">Додати</button>
-    <button class="btn btn-outline-secondary ">Редагувати</button>
-    <button class="btn btn-outline-danger btn-sm">Видалити</button>
-
-    <hr>
-    <div class="card">
-        <div class="card-body">
-            This is content
-
+    {{!-- <div class="card text-bg-primary">
+        <div class="card-header">
+            <div class="display-6">Menu
+            </div>
         </div>
-    </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item text-bg-dark">
+                <a href="#" class="btn btn-link">Home page</a>
+            </li>
+            <li class="list-group-item text-bg-warning">
+                <a href="#" class="btn btn-link">Summary page</a>
+            </li>
+            <li class="list-group-item text-bg-danger">
+                <a href="#" class="btn btn-link">Skills page</a>
+            </li>
+        </ul>
 
-    <br>
-    <br>
-    <br>
+        <div class="card-footer">
 
-    <div class="card">
-        <div class="card-body">
-            <button class="btn btn-secondary btn-lg">Додати</button>
-            <button class="btn btn-outline-secondary ">Редагувати</button>
-            <button class="btn btn-outline-danger btn-sm">Видалити</button>
+            <button class="btn btn-dark btn-sm">Update list</button>
         </div>
+    </div> --}}
+
+    <br>
+    <br>
+    <br>
+
+
+    {{!-- <table class="table table-striped table-bordered text-bg-success">
+        <thead>
+            <tr>
+                <th>
+                    #id
+                </th>
+                <th>
+                    name
+                </th>
+                <th>
+                    age
+                </th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <th>1</th>
+                <td>Jhon</td>
+                <td>35</td>
+            </tr>
+            <tr>
+                <th>2</th>
+                <td>Ivan</td>
+                <td>29</td>
+            </tr>
+            <tr>
+                <th>1</th>
+                <td>Jhon</td>
+                <td>35</td>
+            </tr>
+            <tr>
+                <th>1</th>
+                <td>Jhon</td>
+                <td>35</td>
+            </tr>
+        </tbody>
+    </table> --}}
+
+    <br>
+    <br>
+    <br>
+
+    <div class="card text-bg-success">
+
+        <div class="card-header text-center">Header</div>
+        <div class="card-body text-center">
+            <h6 class="card-title">This is title</h6>
+            <p>This is content of our box</p>
+            <button class="btn btn-light">Click!</button>
+        </div>
+        <div class="card-footer text-center">Footer</div>
     </div>
+    <br>
+    <br>
+    <br>
+
+    {{!-- <div class="row gx-5 gy-1">
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content of our box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content of our box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content of our box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content of our box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+    </div> --}}
+
+
+
+
+
+
+
+
+
+
 
 
 
