--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -8,7 +8,7 @@
     <main>
         <section>
             {{> title data="My education" big=true}}
-            <ul>
+            <ul class="ps-5">
                 {{#each educations}}
                 <li>{{name}}
                     {{#unless isEnd }} (ще в процесі)
@@ -20,7 +20,7 @@
 
         <section>
             {{> title data="My certificates" big=false}}
-            <ul>
+            <ul class="ps-5">
                 {{#each certificates}}
                 <li>{{name}} ({{id}})
 
