--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,7 +1,7 @@
 {{#with footer}}
 <footer>
-    <hr>
-    <br>
+    <hr class="my-5">
+
     <div>
         {{#with social}}
         {{> link text=email.text href=email.href blank=true }}
@@ -10,11 +10,11 @@
 
         {{/with}}
     </div>
-    <br>
-    <div>
+
+    <div class="my-3">
         <em>Copyright {{../header.name.firstname}} {{../header.name.lastname}}</em>
     </div>
-    <br>
+
     <div><em>{{../header.address}}</em></div>
 </footer>
 {{/with}}
