--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,78 +1,15 @@
 <main class="p-5">
 
-    <div class="row g-5">
-        <div class="col-12">
+    <h1> Hello! <i class="bi bi-emoji-smile-fill"></i></h1>
 
-            <label class="form-label">Email address</label>
-            <input class="form-control">
-            <div class="form text text-danger">Error. You need to set correct email</div>
+    <button class="btn btn-warning">
+        <i class="bi bi-sd-card-fill"></i>
+    </button>
 
-        </div>
-        <div class="col-12">
+    <div>
+        <i class="fa-solid fa-brain fa-beat-fade"></i>
+    </div>
 
-
-            <div class="row">
-                <div class="col-2 pt-1">
-                    <label class="form-label">Email address</label>
-
-                </div>
-                <div class="col-6">
-                    <input class="form-control form-control-lg">
-                </div>
-                <div class="col-4 ps-5 pt-1">
-
-                    <div class="form text text-danger">Error. You need to set correct email
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div>
-                <hr>
-            </div>
-
-            <div class="col-12">
-
-                <label class="form-label">Select role</label>
-                <select class="form-select">
-                    <option selected>Open list</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                </select>
-                <div class="form text text-danger">Error. You need to set correct email
-                </div>
-            </div>
-            <div>
-                <hr>
-            </div>
-
-            <div class="col-12">
-                <div class="form-label">Select food</div>
-                <div class="form-check">
-                    <label class="form-check-label">Apple</label>
-                    <input name="food" type="radio" class="form-check-input">
-                </div>
-                <div class="form-check">
-                    <label class="form-check-label">Orange</label>
-                    <input name="food" type="radio" class="form-check-input">
-                </div>
-                <div class="form-check">
-                    <label class="form-check-label">Banana</label>
-                    <input name="food" type="checkbox" class="form-check-input">
-                </div>
-
-                <div class="form-check form-switch">
-                    <label class="form-check-label">Get bonus</label>
-                    <input name="food" type="checkbox" class="form-check-input">
-                </div>
-
-            </div>
-
-
-
-
-        </div>
-
+    <div>
+        <img src="/svg/slack.svg" </div>
 </main>
