--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,15 +1,8 @@
 <main class="p-5">
+    <h1>Hello world!</h1>
 
-    <h1> Hello! <i class="bi bi-emoji-smile-fill"></i></h1>
+    {{> title data="My title" }}
 
-    <button class="btn btn-warning">
-        <i class="bi bi-sd-card-fill"></i>
-    </button>
+    <h1 style="color: red; background: black;">This is text</h1>
 
-    <div>
-        <i class="fa-solid fa-brain fa-beat-fade"></i>
-    </div>
-
-    <div>
-        <img src="/svg/slack.svg" </div>
 </main>
