--- a/src/container/shopcart.hbs
+++ b/src/container/shopcart.hbs
@@ -12,8 +12,7 @@
                     <div class="nav">
                         {{#each navigation.links}}
                         <div class="nav-item">
-                            <a href="{{href}}" {{#if href}}class="nav-link" {{else}}class="nav-link disabled"
-                                {{/if}}>{{text}}</a>
+                            <a href="{{href}}" class="nav-link {{#if @last}} disabled{{/if}}">{{text}}</a>
                         </div>
                         {{/each}}
                     </div>
@@ -47,7 +46,7 @@
 
 
 
-    {{> cartgoodsltem goodsBlock=goodsBlock image=image name=name description=description amount=amount
+    {{> cartgoodsitem goodsBlock=goodsBlock image=image name=name description=description amount=amount
     title=price.title value=price.value buttons=buttons isPrimary=isPrimary isDanger=isDanger text=text}}
 
     <hr>
@@ -142,27 +141,11 @@
                 <div class="row g-5">
                     <div class="nav">
                         <div class="nav-item">
-                            {{#with [0]}}
+                            {{#each this}}
 
-                            <a href="{{link}}" class="nav-link">{{text}}</a>
+                            <a href="{{link}}" class="nav-link {{#if @last}} disabled{{/if}}">{{text}}</a>
 
-                            {{/with}}
-
-                            {{#with [1]}}
-
-                            <a href="{{link}}" class="nav-link">{{text}}</a>
-
-                            {{/with}}
-                            {{#with [2]}}
-
-                            <a href="{{link}}" class="nav-link">{{text}}</a>
-
-                            {{/with}}
-                            {{#with [3]}}
-
-                            <a href="{{link}}" class="nav-link disabled">{{text}}</a>
-
-                            {{/with}}
+                            {{/each}}
 
 
                         </div>
