--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -2,11 +2,34 @@
 Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
-
+<h5 class="px-5">Cписок сторінок</h5>
 <div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    <div class="row">
+        <div class="col-1">
+            <a href="/bio" class="btn btn-primary mb-2">Bio</a>
+            <a href="/car" class="btn btn-primary mb-2">Car</a>
+            <a href="/education" class="btn btn-primary mb-2">Education</a>
+            <a href="/facebook" class="btn btn-primary mb-2">Facebook</a>
+            <a href="/js" class="btn btn-primary mb-2">Js</a>
+            <a href="/mac" class="btn btn-primary mb-2">Mac</a>
+            <a href="/person" class="btn btn-primary mb-2">Person</a>
+            <a href="/program" class="btn btn-primary mb-2">Program</a>
+            <a href="/shopcart" class="btn btn-primary mb-2">Shopcart</a>
+            <a href="/shopcatalog" class="btn btn-primary mb-2">Shopcatalog</a>
+            <a href="/shophome" class="btn btn-primary mb-2">Shophome</a>
+            <a href="/shoporder" class="btn btn-primary mb-2">Shoporder</a>
+            <a href="/shopprofile" class="btn btn-primary mb-2">Shopprofile</a>
+            <a href="/shopreview" class="btn btn-primary mb-2">Shopreview</a>
+            <a href="/skills" class="btn btn-primary mb-2">Skills</a>
+            <a href="/summary" class="btn btn-primary mb-2">Summary</a>
+            <a href="/task21" class="btn btn-primary mb-2">Task21</a>
+            <a href="/task22" class="btn btn-primary mb-2">Task22</a>
+            <a href="/task31" class="btn btn-primary mb-2">Task31</a>
+            <a href="/web" class="btn btn-primary mb-2">Web</a>
+            <a href="/work" class="btn btn-primary mb-2">Work</a>
 
-    <button type="button" class="btn btn-primary">Купити</button>
+        </div>
+    </div>
 </div>
 
 {{!--
